fixes Show Patch alignment, stops music and hides player once a patch is created

--- a/app/assets/stylesheets/music-alt.scss
+++ b/app/assets/stylesheets/music-alt.scss
@@ -24,9 +24,9 @@ body {
 
   .scenarios {
     // padding: 5vh 0;
-    width: 100vh;
-    height: 100vw;
-    padding: 40px;
+    // width: 100vh;
+    // height: 100vw;
+    // padding: 40px;
     // margin-top: 70px;
 
   p {
@@ -79,7 +79,7 @@ body {
   }
 }
 
-// Section 2 - Player //////////////////////
+// Section 2 - Player //////////////////////////////////////////////////
 
 #questions {
 
@@ -109,6 +109,12 @@ body {
       }    
     }
   }
+}
+
+#patch-btn {
+  display: block;
+  margin: 0 auto;
+  clear: both;
 }
 
 .pop-up {
@@ -199,7 +205,7 @@ body {
 }
 
 
-//DREAM PATCH //////////////////////////////////////////////////////
+//DREAM PATCH ///////////////////////////////////////////////////////////
 
 #container {
   // width: 600px;
